Fix quicksettings alignment

--- a/style.css
+++ b/style.css
@@ -329,6 +329,7 @@ div.dimensions-tools{
 /* settings */
 #quicksettings {
     width: fit-content;
+    align-items: end;
 }
 
 #quicksettings > div, #quicksettings > fieldset{
